--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crystal Collector Game</title>
-    <link rel="stylesheet" type="text/reset" href="/assets/css/reset.css">
-    <link rel="stylesheet" type="text/stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/reset.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    
 
 </head>
 <body>
+    <div class="jumbotron">
+        <h1 class="text-center">Crystal Collecter Game!</h1><br><hr>
+        <p class="text-center">You will be given a random number at the start of the game.</p>
+        <p class="text-center">There are four crystals below. By clicking on a crystal, you will add a specific amount of points to your total score.</p>
+        <p class="text-center">You win the game by matching your total score to random number and you lose the game if your total score goes above the random number.</p>
+        <p class="text-center">The value of each crystal is hidden from you until you click on it.</p>
+        <p class="text-center">Each time when the game starts, the game will change the value of each crystal.</p>
+    </div>
     <div class="container">
-        <div class="row">
-            <div class="col-md-5 p-5" id="title">
-                <h2>Crystal Collector Game!</h2>
+        <div class="row justify-content-center align-self-center">
+            <div class="col-md-4" id="randomnum">nhdhdfhfdhfdhrdhf
+            </div>
+            <div class="col-md-1">drhdrhfdgdhf
+            </div>
+            <div class="col-md-2" id="score">fdhhergdfgdfherher
+            </div>
+        </div>
+        <div class="row justify-content-center align-self-center">
+            <div class="col-md-3" id="first">
+                <img src="/assets/images/Screen Shot 2020-04-25 at 10.10.06 PM.png" alt="..." class="img-thumbnail">
+            </div>
+            <div class="col-md-3" id="second">
+                <img src="/assets/images/Screen Shot 2020-04-25 at 10.10.51 PM.png" alt="..." class="img-thumbnail">
+            </div>
+            <div class="col-md-3" id="third">
+                <img src="/assets/images/Screen Shot 2020-04-25 at 10.11.05 PM.png" alt="..." class="img-thumbnail">
+            </div>
+            <div class="col-md-3" id="fourth">
+                <img src="/assets/images/Screen Shot 2020-04-25 at 10.11.17 PM.png" alt="..." class="img-thumbnail">
             </div>
         </div>
     </div>
