finalized structure for HTML

--- a/index.html
+++ b/index.html
@@ -21,27 +21,51 @@
     </div>
     <div class="container">
         <div class="row justify-content-center align-self-center">
-            <div class="col-md-4" id="randomnum">nhdhdfhfdhfdhrdhf
+            <div class="col-md-4 m-3 pt-5" style="height: 250px;" id="box">
+                <h4>Target Number</h4>
+                <div id="randomnum">Random #
+
+                </div>
+                <hr>
+                <h4>User Number</h4>
+                <div id="user">
+                    User # addion
+                </div>
             </div>
-            <div class="col-md-1">drhdrhfdgdhf
+            <div class="col-md-2 m-5" style="height: 150px;" id="box">
+                <h4>Score:</h4>
+                <div id="score">
+                    <div class="pt-4" id="win">Wins</div>
+                    <div class="pt-3" id="loses">Losses</div>
+                </div>
             </div>
-            <div class="col-md-2" id="score">fdhhergdfgdfherher
+            <div class="row justify-content-center align-self-center">
+                <button type="button" class="col-md-12 m-2 btn btn-primary" id="reset" style="height: 50px;">RESET</button>
             </div>
         </div>
-        <div class="row justify-content-center align-self-center">
-            <div class="col-md-3" id="first">
+        <div class="row justify-content-center align-self-center mb-5">
+            <div class="col-md-3" id="gem">
                 <img src="/assets/images/Screen Shot 2020-04-25 at 10.10.06 PM.png" alt="..." class="img-thumbnail">
             </div>
-            <div class="col-md-3" id="second">
+            <div class="col-md-3" id="gem">
                 <img src="/assets/images/Screen Shot 2020-04-25 at 10.10.51 PM.png" alt="..." class="img-thumbnail">
             </div>
-            <div class="col-md-3" id="third">
+            <div class="col-md-3" id="gem">
                 <img src="/assets/images/Screen Shot 2020-04-25 at 10.11.05 PM.png" alt="..." class="img-thumbnail">
             </div>
-            <div class="col-md-3" id="fourth">
+            <div class="col-md-3" id="gem">
                 <img src="/assets/images/Screen Shot 2020-04-25 at 10.11.17 PM.png" alt="..." class="img-thumbnail">
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12 bg-light" style="height: 60px">
+            <footer class="text-center pt-3">
+              <p>&copy; 2020 by Eddie Kim for UCLA CODING BOOTCAMP</p>          
+            </footer>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
