--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </div>
     <div class="container">
         <div class="row justify-content-center align-self-center">
-            <div class="col-md-4 m-3 pt-5" style="height: 250px;" id="box">
+            <div class="col-md-4 m-3 pt-4" style="height: 225px;" id="box">
                 <h4>Target Number</h4>
                 <div id="randomnum">Random #
 
                 </div>
-                <hr>
+                <hr class="mt-4">
                 <h4>User Number</h4>
                 <div id="user">
                     User # addion
