--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="col-md-2 m-5" style="height: 150px;" id="box">
                 <h4>Score:</h4>
                 <div id="score">
-                    <div class="pt-3" id="win">Wins: 0</div>
-                    <div class="pt-3" id="losses">Losses: 0</div>
+                    <div class="pt-3" id="win"></div>
+                    <div class="pt-3" id="losses"></div>
                 </div>
             </div>
             <div class="row justify-content-center align-self-center">
