edited file path to fix the problem

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crystal Collector Game</title>
-    <link rel="stylesheet" href="/assets/css/reset.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Open+Sans+Condensed:wght@300&family=Poppins:wght@700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -44,16 +44,16 @@
         </div>
         <div class="row justify-content-center align-self-center mb-5">
             <div class="col-md-3" id="gem">
-                <img src="/assets/images/Screen Shot 2020-04-25 at 10.10.06 PM.png" alt="..." class="img-thumbnail" id="grey">
+                <img src="assets/images/Screen Shot 2020-04-25 at 10.10.06 PM.png" alt="..." class="img-thumbnail" id="grey">
             </div>
             <div class="col-md-3" id="gem">
-                <img src="/assets/images/Screen Shot 2020-04-25 at 10.10.51 PM.png" alt="..." class="img-thumbnail" id="red">
+                <img src="assets/images/Screen Shot 2020-04-25 at 10.10.51 PM.png" alt="..." class="img-thumbnail" id="red">
             </div>
             <div class="col-md-3" id="gem">
-                <img src="/assets/images/Screen Shot 2020-04-25 at 10.11.05 PM.png" alt="..." class="img-thumbnail" id="green">
+                <img src="assets/images/Screen Shot 2020-04-25 at 10.11.05 PM.png" alt="..." class="img-thumbnail" id="green">
             </div>
             <div class="col-md-3" id="gem">
-                <img src="/assets/images/Screen Shot 2020-04-25 at 10.11.17 PM.png" alt="..." class="img-thumbnail" id="yellow">
+                <img src="assets/images/Screen Shot 2020-04-25 at 10.11.17 PM.png" alt="..." class="img-thumbnail" id="yellow">
             </div>
         </div>
     </div>
@@ -66,6 +66,6 @@
           </div>
         </div>
       </div>
-      <script src="/assets/javascript/game.js"></script>
+      <script src="assets/javascript/game.js"></script>
 </body>
 </html>
